Fix scrollbar colour

--- a/css/notes.css
+++ b/css/notes.css
@@ -31,18 +31,18 @@
 {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   border-radius: 10px;
-  background-color: #F5F5F5;
+  background-color: #222222;
 }
 
 .left-panel::-webkit-scrollbar
 {
   width: 12px;
-  background-color: #F5F5F5;
+  background-color: #222222;
 }
 
 .left-panel::-webkit-scrollbar-thumb
 {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: #111111;
+  background-color: #555555;
 }
